# scrapy

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
tests/: downloader.rs
