[package]
name = "scrapy"
version = "0.0.2"
authors = ["陈琨 <chenkun_lws@126.com>"]
edition = "2018"
license = "MIT"
description = "Pure rust implementation of web crawler framework \"scrapy\""
categories = ["web-programming", "network-programming"]

[dependencies]
hyper = "0.12.9"
pretty_env_logger = "0.2.4"
futures = "0.1.24"
