[package]
name = "scrapy"
version = "0.0.2"
authors = ["陈琨 <chenkun_lws@126.com>"]
edition = "2018"
license = "MIT"
description = "Pure rust implementation of web crawler framework \"scrapy\""
categories = ["web-programming", "network-programming"]

[dependencies]
pretty_env_logger = "0.2.4"
reqwest = "0.8.8"
